Add submit button

--- a/garden-form.html
+++ b/garden-form.html
@@ -111,6 +111,7 @@
                         onChangeHandler={print}
                     />
                     <TextInput id="plant-notes" name="plant-notes" label="Notes" className="text-input"/>
+                    <button type="btn" className="action-btn" onClick={print}>Submit</button>
                 </div>
             );
 
